Update title and headings in index.htmlCV

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Mon CV</title>
+  <title>EL HAMDAOUI Mohammed</title>
   <link rel="stylesheet" href="style.css">
   
 
@@ -81,13 +81,13 @@
   <header>
     <div style="text-align:center;">
       <img src="mm.png" alt="Ma photo" width="150" style="border-radius:50%; box-shadow:2px 2px 6px #333;">
-      <h1>CV professionnel</h1>
+      <h1>Apropos de moi</h1>
     </div>
     <img src="qrcode_303819899_888d7b2290ed7ff8bc460df2be7405f8.png" alt="QR Code vers Github" class="qrcode">
   </header>
   <nav>
     <ul>
-      <li><a href="#diplomes">Diplômes</a></li>
+      <li><a href="#diplomes">Diplôme</a></li>
       <li><a href="#projets">Projets</a></li>
       <li><a href="#tableau">Tableau</a></li>
       <li><a href="#contact">Contact</a></li>
